tests/errors/test-generic-warning.sac
// This test asserts that generic warnings are printed as `Warning:`
// SAC_TEST|include common.mk
// SAC_TEST|SAC2C_FLAGS += -check c -v1 -b 1:loc
// SAC_TEST|CALL_SAC2C := $(SAC2C) $(SAC2C_FLAGS)
//
// SAC_TEST|all: <file-name>
// SAC_TEST|<tab>$(CALL_SAC2C) $< 2>&1 | grep -Pi "^Warning:$$" | $(GREP_COMMAND_OUTPUT) "" 1

// No code is necessary.